[package]
name = "ae"
version = "0.2.0"
authors = ["AMMP Technologies B.V. <dev@ammp.io>"]
edition = "2021"
description = "Edge application for AMMP"
repository = "https://github.com/ammpio/ammp-edge"

[dependencies]
anyhow = "*"
backoff = "*"
chrono = "*"
chrono-tz = "*"
dotenv = "*"
env_logger = { version = "*", default-features = false }
flume = "*"
getrandom = "*"
hex = "*"
itertools = "*"
kvstore = { path = "kvstore" }
log = "*"
native-tls = "*"
nix = { version = "*", features = ["socket"] }
once_cell = "*"
pico-args = "*"
rumqttc = { version = "*", default-features = false }
rusqlite = { version = "*", features = ["serde_json"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
suppaftp = { version = "*", features = ["default", "deprecated", "native-tls"] }
sysinfo = { version = "*", default-features = false }
thiserror = "*"
typify = "*"
ureq = { version = "*", default-features = false, features = ["json", "native-tls"] }
url = "*"
zip = { version = "*", default-features = false, features = ["deflate"] }

[dev-dependencies]
assert_cmd = "*"
mockito = "*"
regex = "*"
predicates = "*"
temp-env = "*"
tempfile = "*"

[workspace]
members = [
    "kvstore"
]

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true
opt-level = "z"  # Optimize for size.
codegen-units = 1
