[package]
name = "ae"
version = "0.2.1"
authors = ["AMMP Technologies B.V. <dev@ammp.io>"]
edition = "2021"
description = "Edge application for AMMP"
repository = "https://github.com/ammpio/ammp-edge"

[dependencies]
anyhow = "1.0.70"
backoff = "0.4.0"
chrono = "0.4.24"
chrono-tz = "0.8.2"
dotenv = "0.15.0"
env_logger = { version = "0.10.0", default-features = false }
flume = "0.10.14"
getrandom = "0.2.9"
hex = "0.4.3"
itertools = "0.10.5"
kvstore = { path = "kvstore" }
log = "0.4.17"
native-tls = "0.2.11"
nix = { version = "0.26.2", features = ["socket"] }
once_cell = "1.17.1"
pico-args = "0.5.0"
rumqttc = { version = "0.20.0", default-features = false }
rusqlite = { version = "0.29.0", features = ["serde_json"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
sntpc = { version = "0.3.2", features = ["log"] }
suppaftp = { version = "5.1.1", features = ["default", "deprecated", "native-tls"] }
sysinfo = { version = "0.28.4", default-features = false }
thiserror = "1.0.40"
typify = "0.0.11"
ureq = { version = "2.6.2", default-features = false, features = ["json", "native-tls"] }
url = "2.3.1"
zip = { version = "0.6.4", default-features = false, features = ["deflate"] }

[dev-dependencies]
assert_cmd = "2.0.11"
mockito = "1.0.2"
regex = "1.7.3"
predicates = "3.0.3"
temp-env = "0.3.3"
tempfile = "3.5.0"

[workspace]
members = [
    "kvstore"
]

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true
opt-level = "z"  # Optimize for size.
codegen-units = 1
