[package]
name = "ae"
version = "0.3.0"
authors = ["AMMP Technologies B.V. <dev@ammp.io>"]
edition = "2024"
description = "Edge application for AMMP"
repository = "https://github.com/ammpio/ammp-edge"

[dependencies]
anyhow = "1.0.95"
ahash = "0.8.11"
backoff = "0.4.0"
byteorder = "1.5"
chrono = { version = "0.4.39", default-features = false, features = ["std", "clock"] }
chrono-tz = "0.10.1"
dotenv = "0.15.0"
env_logger = { version = "0.11.6", default-features = false }
flume = "0.11.1"
futures = "0.3"
hex = "0.4.3"
itertools = "0.14.0"
kvstore = { path = "kvstore" }
log = "0.4.25"
native-tls = ">=0.2.14"
nix = { version = "0.29.0", features = ["net", "socket"] }
once_cell = "1.20.3"
pico-args = "0.5.0"
rand = "0.8.5"
rumqttc = { version = "0.25.0", default-features = false }
rusqlite = { version = "0.29.0", features = ["serde_json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sntpc = { version = "0.4.0", features = ["log"] }
suppaftp = { version = "6.0.7", features = ["default", "deprecated", "native-tls"] }
sysinfo = { version = "0.33.1", default-features = false, features = ["system"] }
thiserror = "2.0.11"
tokio = { version = "1.47", features = ["rt-multi-thread"] }
tokio-modbus = { version = "0.16", features = ["tcp", "rtu"] }
typify = "0.3.0"
ureq = { version = "3.0.5", default-features = false, features = ["json", "native-tls"] }
url = "2.5.4"
zip = { version = ">=2.3.0", default-features = false, features = ["deflate"] }

[dev-dependencies]
assert_cmd = "2.0.16"
mockito = { version = "1.6.1", default-features = false }
regex = "1.11.1"
predicates = "3.1.3"
temp-env = "0.3.6"
tempfile = "3.17.1"

[workspace]
members = [
    "kvstore"
]

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true
opt-level = "z"  # Optimize for size.
codegen-units = 1
