[package]
name = "derived_models"
version = "0.1.0"
edition = "2024"
description = "Derived Rust types from JSON schemas"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
typify = "0.4"
serde_json = "1.0"
prettyplease = "0.2"
syn = { version = "2.0", features = ["full"] }
schemars = { version = "0.8", features = ["chrono"] }
